maps, bound & running service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PathBrowser</string>
+    <string name="fragment_map">Map</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
