--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PathBrowser</string>
     <string name="fragment_map">Map</string>
     <string name="title_activity_maps">Map</string>
+    <string name="points_prefix">Points: %s</string>
 </resources>
